; ModuleID = '/home/carl/AnghaBench/darwin-xnu/libkern/kxld/extr_kxld_sym.c_kxld_sym_get_final_sym_name_from_class_name.c'
source_filename = "/home/carl/AnghaBench/darwin-xnu/libkern/kxld/extr_kxld_sym.c_kxld_sym_get_final_sym_name_from_class_name.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

@KERN_FAILURE = common dso_local global i32 0, align 4
@OSOBJ_PREFIX = common dso_local global i32 0, align 4
@finish = common dso_local global i32 0, align 4
@FINAL_CLASS_TOKEN = common dso_local global i8* null, align 8
@KERN_SUCCESS = common dso_local global i32 0, align 4

; Function Attrs: noinline nounwind optnone uwtable
define dso_local i32 @kxld_sym_get_final_sym_name_from_class_name(i8* %0, i8* %1, i64 %2) #0 {
  %4 = alloca i8*, align 8
  %5 = alloca i8*, align 8
  %6 = alloca i64, align 8
  %7 = alloca i32, align 4
  %8 = alloca i64, align 8
  store i8* %0, i8** %4, align 8
  store i8* %1, i8** %5, align 8
  store i64 %2, i64* %6, align 8
  %9 = load i32, i32* @KERN_FAILURE, align 4
  store i32 %9, i32* %7, align 4
  store i64 0, i64* %8, align 8
  %10 = load i8*, i8** %4, align 8
  %11 = call i32 @check(i8* %10)
  %12 = load i8*, i8** %5, align 8
  %13 = call i32 @check(i8* %12)
  %14 = load i8*, i8** %5, align 8
  %15 = load i32, i32* @OSOBJ_PREFIX, align 4
  %16 = load i64, i64* %6, align 8
  %17 = call i64 @strlcpy(i8* %14, i32 %15, i64 %16)
  store i64 %17, i64* %8, align 8
  %18 = load i64, i64* %8, align 8
  %19 = load i64, i64* %6, align 8
  %20 = icmp slt i64 %18, %19
  %21 = zext i1 %20 to i32
  %22 = load i32, i32* @finish, align 4
  %23 = load i32, i32* @KERN_FAILURE, align 4
  store i32 %23, i32* %7, align 4
  %24 = call i32 @require_action(i32 %21, i32 %22, i32 %23)
  %25 = load i8*, i8** %5, align 8
  %26 = load i8*, i8** %4, align 8
  %27 = load i64, i64* %6, align 8
  %28 = call i64 @strlcat(i8* %25, i8* %26, i64 %27)
  store i64 %28, i64* %8, align 8
  %29 = load i64, i64* %8, align 8
  %30 = load i64, i64* %6, align 8
  %31 = icmp slt i64 %29, %30
  %32 = zext i1 %31 to i32
  %33 = load i32, i32* @finish, align 4
  %34 = load i32, i32* @KERN_FAILURE, align 4
  store i32 %34, i32* %7, align 4
  %35 = call i32 @require_action(i32 %32, i32 %33, i32 %34)
  %36 = load i8*, i8** %5, align 8
  %37 = load i8*, i8** @FINAL_CLASS_TOKEN, align 8
  %38 = load i64, i64* %6, align 8
  %39 = call i64 @strlcat(i8* %36, i8* %37, i64 %38)
  store i64 %39, i64* %8, align 8
  %40 = load i64, i64* %8, align 8
  %41 = load i64, i64* %6, align 8
  %42 = icmp slt i64 %40, %41
  %43 = zext i1 %42 to i32
  %44 = load i32, i32* @finish, align 4
  %45 = load i32, i32* @KERN_FAILURE, align 4
  store i32 %45, i32* %7, align 4
  %46 = call i32 @require_action(i32 %43, i32 %44, i32 %45)
  %47 = load i32, i32* @KERN_SUCCESS, align 4
  store i32 %47, i32* %7, align 4
  br label %48

48:                                               ; preds = %3
  %49 = load i32, i32* %7, align 4
  ret i32 %49
}

declare dso_local i32 @check(i8*) #1

declare dso_local i64 @strlcpy(i8*, i32, i64) #1

declare dso_local i32 @require_action(i32, i32, i32) #1

declare dso_local i64 @strlcat(i8*, i8*, i64) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
